# stm32-spi-flash

./: README.md  boot_stm.sh  cs_low.sh  flash.py  pyproject.toml  requirements.txt  reset_stm.sh  setup.py
spiflash/: devices.yml  lib_gpio.c  spi_base.py  spi_dev.py  spi_flasher.py  spiflash.py
